// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Selector renders correctly when disabled 1`] = `
<div
  class="_selector_729a27"
>
  <button
    class="_trigger_729a27"
    disabled=""
    type="button"
  >
    <span
      class="_value_729a27"
    >
      Select option
    </span>
    <span
      aria-hidden="true"
      class="_icon_729a27"
    >
      ▼
    </span>
  </button>
</div>
`;

exports[`Selector renders correctly with custom className 1`] = `
<div
  class="_selector_729a27 custom-class"
>
  <button
    class="_trigger_729a27"
    type="button"
  >
    <span
      class="_value_729a27"
    >
      Select option
    </span>
    <span
      aria-hidden="true"
      class="_icon_729a27"
    >
      ▼
    </span>
  </button>
</div>
`;

exports[`Selector renders correctly with default props 1`] = `
<div
  class="_selector_729a27"
>
  <button
    class="_trigger_729a27"
    type="button"
  >
    <span
      class="_value_729a27"
    >
      Select option
    </span>
    <span
      aria-hidden="true"
      class="_icon_729a27"
    >
      ▼
    </span>
  </button>
</div>
`;

exports[`Selector renders correctly with error variant 1`] = `
<div
  class="_selector_729a27"
>
  <button
    class="_trigger_729a27"
    type="button"
  >
    <span
      class="_value_729a27"
    >
      Select option
    </span>
    <span
      aria-hidden="true"
      class="_icon_729a27"
    >
      ▼
    </span>
  </button>
</div>
`;

exports[`Selector renders correctly with large size 1`] = `
<div
  class="_selector_729a27"
>
  <button
    class="_trigger_729a27"
    type="button"
  >
    <span
      class="_value_729a27"
    >
      Select option
    </span>
    <span
      aria-hidden="true"
      class="_icon_729a27"
    >
      ▼
    </span>
  </button>
</div>
`;

exports[`Selector renders correctly with placeholder 1`] = `
<div
  class="_selector_729a27"
>
  <button
    class="_trigger_729a27"
    type="button"
  >
    <span
      class="_value_729a27"
    >
      Choose an option
    </span>
    <span
      aria-hidden="true"
      class="_icon_729a27"
    >
      ▼
    </span>
  </button>
</div>
`;

exports[`Selector renders correctly with selected value 1`] = `
<div
  class="_selector_729a27"
>
  <button
    class="_trigger_729a27"
    type="button"
  >
    <span
      class="_value_729a27"
    >
      Option 1
    </span>
    <span
      aria-hidden="true"
      class="_icon_729a27"
    >
      ▼
    </span>
  </button>
</div>
`;

exports[`Selector renders correctly with small size 1`] = `
<div
  class="_selector_729a27"
>
  <button
    class="_trigger_729a27"
    type="button"
  >
    <span
      class="_value_729a27"
    >
      Select option
    </span>
    <span
      aria-hidden="true"
      class="_icon_729a27"
    >
      ▼
    </span>
  </button>
</div>
`;

exports[`Selector renders correctly with success variant 1`] = `
<div
  class="_selector_729a27"
>
  <button
    class="_trigger_729a27"
    type="button"
  >
    <span
      class="_value_729a27"
    >
      Select option
    </span>
    <span
      aria-hidden="true"
      class="_icon_729a27"
    >
      ▼
    </span>
  </button>
</div>
`;
